<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WaterPin</string>
    <string name="admobId">ca-app-pub-2452228545701512~5634059465</string>
    <string name="admobBanner">ca-app-pub-2452228545701512/8423874337</string>
    <string name="fabricKey">8a672da65b206f92c4873b276005c0a30d5a5cd6</string>
    <string name="todayGoal">Goal</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="water_tracker">water tracker</string>
    <string name="inputMyTargetText">Input my goal</string>
    <string name="startConfirm">confirm</string>
    <string name="todayWaterText">today water</string>
    <string name="leftWater">Remain Water</string>
    <string name="settingText">Setting</string>
    <string name="locksreenText">LockScreen</string>
    <string name="lockscrenOff">LockScreen Turn Off.</string>
    <string name="lockscrenOn">LockScreen Turn On.</string>
    <string name="unlock">UnLock</string>
    <string name="hour">h</string>
    <string name="min">m</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="waterHistory">History</string>
    <string name="selectBackground">Select Background!</string>
    <string name="gallery">my gallery</string>
    <string name="storagePermissionDenied">Permission Denied</string>
    <string name="storagePermissionNeverask">Permission Denied</string>
    <string name="backgroundImage">backgroundImage</string>
    <string name="addWaterButton">addWaterButton</string>
    <string name="waterAlarm">Alarm</string>
    <string name="prepareAlarmService">We are preparing alarm service.</string>
    <string name="selectMyWaterType">Amount of water to drink</string>
    <string name="prepareCustomWaterService">We are preparing a custom unit service.</string>
    <string name="inputGoals">Please enter your intake of 200ml or more.</string>
    <string name="inputMyTargetTextHint">Please provide a target intake of 200ml or more.</string>
    <string name="myWaterText">MyWater</string>
    <string name="soundsText">Button Sounds</string>
    <string name="vibrateText">Button Vibrate</string>
    <string name="button_allow">allow</string>
    <string name="button_deny">denyed</string>
    <string name="permission_crop_rationale">CROP!!</string>
    <string name="lockscreenSettingTitle">LockScreen Setting</string>
    <string name="lockscrenSoundsOn">Turn On Button Sounds!</string>
    <string name="lockscrenSoundsOff">Turn Off Button Sounds!</string>
    <string name="lockscrenVibrateOn">Turn On Button Vibrate!</string>
    <string name="lockscrenVibrateOff">Turn Off Button Vibrate!</string>
    <string name="versionInfoText">Version Info</string>
    <string name="versionInfo">Ver 1.0.0</string>
</resources>
