<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blackColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nanumbareunpen"
        android:text="@string/lockscreenSettingTitle"
        android:textColor="@color/whiteColor"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/soundsText"
                android:textColor="@color/whiteColor"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/lockscreenSoundsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="false"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/vibrateText"
                android:textColor="@color/whiteColor"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/lockscreenVibrateSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="false"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:thumb="@drawable/switch_thumb_custom"
                android:track="@drawable/switch_track_custom" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>