<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hanmo.com.drinkingwaterassistant.MainActivity">

    <TextView
        android:id="@+id/todayWaterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="물마신 기록"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/lockscreenSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:checked="false"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:thumb="@drawable/switch_thumb_custom"
        android:track="@drawable/switch_track_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/waterProgressbarFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2">

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/waterGlassIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_fileName="water_glass.json"
                app:lottie_loop="true" />


            <TextView
                android:id="@+id/waterPercent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="60%"
                android:textColor="@color/mainColor"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            xmlns:progress="http://schemas.android.com/apk/res-auto"
            android:padding="20dp"
            android:id="@+id/waterProgressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            progress:progressBackgroundColor="#ffffff"
            progress:progressColor="#7896CF"
            progress:progressStrokeWidth="5dp"
            progress:textColor="@android:color/transparent" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/waterInfoLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:orientation="vertical"
        android:background="@drawable/bg_mainframe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.146"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todayWater"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1200"
                    android:paddingBottom="3dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todayGoal"
                    android:textColor="@color/mainFrameTextColor" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/waterGoal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2000ml"
                    android:paddingBottom="3dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todayWaterText"
                    android:textColor="@color/mainFrameTextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todayLeftWaterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2000ml"
                    android:paddingBottom="3dp"
                    android:textColor="@color/whiteColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leftWater"
                    android:textColor="@color/mainFrameTextColor" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/waterList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main_list"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:fadingEdge="none"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbarFadeDuration="0"
            android:scrollbarSize="3dp"
            android:scrollbarThumbVertical="@color/scollbarColor"
            android:scrollbars="vertical"/>

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


</android.support.constraint.ConstraintLayout>
